force-app/main/default/objects/Contact/fields/Rank__c.field-meta.xml
<CustomField>
    <fullName>Rank__c</fullName>
    <defaultValue>/* Default GM contacts to rank 1, Dev contacts to blank. */
IF(CONTAINS($RecordType.DeveloperName, &quot;GM&quot;), 1, null)</defaultValue>
    <description>Used to sort contacts within an account, for example, to pick the primary one</description>
    <inlineHelpText>Used to sort contacts within an account, for example, to pick the primary one</inlineHelpText>
    <label>Rank</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>