force-app/main/default/objects/Contact/fields/Rank_non_blank__c.field-meta.xml
<CustomField>
    <fullName>Rank_non_blank__c</fullName>
    <description>The value of Rank if non-blank, else 90</description>
    <formula>BLANKVALUE(Rank__c, 90)</formula>
    <inlineHelpText>The value of Rank if non-blank, else 90</inlineHelpText>
    <label>Rank non blank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>