force-app/main/default/objects/Contact/fields/Skype__c.field-meta.xml
<CustomField>
    <fullName>Skype__c</fullName>
    <description>Skype account name for this contact</description>
    <inlineHelpText>Skype account name for this contact</inlineHelpText>
    <label>Skype</label>
    <length>255</length>
    <type>Text</type>
</CustomField>