force-app/main/default/objects/Contact/fields/Sync_Log_Record__c.field-meta.xml
<CustomField>
    <fullName>Sync_Log_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sync Log Record</label>
    <referenceTo>Sync_Log_Record__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>