force-app/main/default/objects/Contact/fields/Tier_from_account__c.field-meta.xml
<CustomField>
    <fullName>Tier_from_account__c</fullName>
    <formula>Text(Account.Tier__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tier from account</label>
    <type>Text</type>
</CustomField>