force-app/main/default/objects/Contact/fields/Time_with_org__c.field-meta.xml
<CustomField>
    <fullName>Time_with_org__c</fullName>
    <description>Approximate time this contact has been with the organization</description>
    <inlineHelpText>Approximate time this contact has been with the organization</inlineHelpText>
    <label>Time with org</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Less than 1 year</fullName>
            </value>
            <value>
                <fullName>1 - 2 years</fullName>
            </value>
            <value>
                <fullName>3 - 5 years</fullName>
            </value>
            <value>
                <fullName>6 - 10 years</fullName>
            </value>
            <value>
                <fullName>11 - 20 years</fullName>
            </value>
            <value>
                <fullName>Over 20 years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>