force-app/main/default/objects/Contact/fields/Twitter__c.field-meta.xml
<CustomField>
    <fullName>Twitter__c</fullName>
    <description>Twitter screen name - captured via twitter lead ads</description>
    <inlineHelpText>Twitter screen name - captured via twitter lead ads</inlineHelpText>
    <label>Twitter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>