force-app/main/default/objects/Contact/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>A picklist of the highest level categorization of this contact. The category can be further described in the Secondary Type field.</inlineHelpText>
    <label>Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Friend</fullName>
                <default>true</default>
                <label>Friend</label>
            </value>
            <value>
                <fullName>Corporate Contact</fullName>
            </value>
            <value>
                <fullName>Alumnus</fullName>
            </value>
            <value>
                <fullName>Institutional Proxy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>