force-app/main/default/objects/Contact/fields/Use_Nickname__c.field-meta.xml
<CustomField>
    <fullName>Use_Nickname__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if nickname should be used in letters and AR instead of first name</description>
    <label>Use Nickname</label>
    <type>Checkbox</type>
</CustomField>