force-app/main/default/objects/Contact/recordTypes/Contact_Dev.recordType-meta.xml
<RecordType>
    <fullName>Contact_Dev</fullName>
    <active>true</active>
    <description>Record type for Dev&apos;s contact records (including individual donors and prospects)</description>
    <label>Contact Dev</label>
</RecordType>