force-app/main/default/objects/Contact/recordTypes/Contact_GM.recordType-meta.xml
<RecordType>
    <fullName>Contact_GM</fullName>
    <active>true</active>
    <description>For grantmaking-related contact records, primarily staff at grantee/applicant orgs</description>
    <label>Contact GM</label>
</RecordType>