force-app/main/default/objects/Contact/recordTypes/Contact_GM_Advisor.recordType-meta.xml
<RecordType>
    <fullName>Contact_GM_Advisor</fullName>
    <active>true</active>
    <description>For contact records of advisors</description>
    <label>Contact GM Advisor</label>
</RecordType>