force-app/main/default/objects/Contact/validationRules/Greeting.validationRule-meta.xml
<ValidationRule>
    <fullName>Greeting</fullName>
    <active>false</active>
    <description>Limits the length of this field to 50 characters.</description>
    <errorConditionFormula>IF( LEN(  Greeting__c  ) &gt; 50, true, false)</errorConditionFormula>
    <errorDisplayField>Greeting__c</errorDisplayField>
    <errorMessage>The data for the Greeting is longer than the maximum allowed length of 50 characters.</errorMessage>
</ValidationRule>