force-app/main/default/objects/Contact/validationRules/No_account.validationRule-meta.xml
<ValidationRule>
    <fullName>No_account</fullName>
    <active>false</active>
    <description>The contact must have a parent account</description>
    <errorConditionFormula>AND(
 ISBLANK(AccountId),
 ISNEW()
)</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>The contact must have a parent account</errorMessage>
</ValidationRule>