force-app/main/default/objects/Contact/validationRules/Owner_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Owner_Change</fullName>
    <active>true</active>
    <description>Only &quot;System Admin&quot; profiles are allowed to change the owner of a contact.</description>
    <errorConditionFormula>AND(
 ISCHANGED( OwnerId ) ,
 NOT (CONTAINS($Profile.Name, &quot;System Admin&quot;))
)</errorConditionFormula>
    <errorMessage>Only the SysAdmin profile has permission to change the owner of a contact.</errorMessage>
</ValidationRule>