force-app/main/default/objects/Contact/listViews/All_GM.listView-meta.xml
<ListView>
    <fullName>All_GM</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Email2__c</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>Rank__c</columns>
    <columns>CONTACT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Contact_GM</value>
    </filters>
    <label>All GM</label>
</ListView>